--- a/package.json
+++ b/package.json
@@ -1,32 +1,51 @@
 {
-  "name": "next-starter-tailwind",
-  "version": "1.1.0",
+  "name": "next-starter-tailwindcss",
+  "private": true,
   "description": "Next.js starter styled with Tailwind CSS",
-  "main": "index.js",
+  "version": "1.1.0",
+  "author": "Luke Bennett",
+  "dependencies": {
+    "@reach/dialog": "^0.10.4",
+    "@tailwindcss/ui": "^0.3.0",
+    "next": "9.4.4",
+    "prop-types": "^15.7.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-spring": "^8.0.27",
+    "tailwindcss": "1.4.6",
+    "typeface-inter": "^3.12.0",
+    "typeface-montserrat": "^0.0.75"
+  },
+  "devDependencies": {
+    "autoprefixer": "9.8.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-lukebennett": "0.0.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.0.5"
+  },
+  "license": "MIT",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "export": "npm run build && next export",
+    "export": "yarn run build && next export",
     "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/taylorbryant/next-starter-tailwind.git"
+    "url": "git+https://github.com/lukebennett88/next-starter-tailwind.git"
   },
-  "author": "Taylor Bryant",
-  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/taylorbryant/next-starter-tailwind/issues"
+    "url": "https://github.com/lukebennett88/next-starter-tailwind/issues"
   },
-  "homepage": "https://github.com/taylorbryant/next-starter-tailwind#readme",
-  "dependencies": {
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "9.8.0",
-    "tailwindcss": "1.4.6"
-  }
+  "homepage": "https://github.com/lukebennett88/next-starter-tailwind#readme"
 }
