--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@reach/dialog": "^0.10.4",
     "@tailwindcss/ui": "^0.3.0",
+    "cssnano": "^4.1.10",
     "next": "9.4.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
